# TracerX

./: .gitignore  AABB.h  CMakeLists.txt  Camera.h  Environment.h  LICENSE  Material.h  Mesh.h  README.md  RenderVisual.cpp  Renderer.cpp  Renderer.h  RendererUI.cpp  RendererUI.h  RendererVisual.h  Sphere.h  TracerX.cpp  TracerX.sln  TracerX.vcxproj  TracerX.vcxproj.filters  Triangle.h  VectorMath.cpp  VectorMath.h  Vertex3.h  shader.frag  testBVH.md  testSSBO.md  todo.md
.github/workflows/: static.yml
CLI/: CMakeLists.txt  main.cpp
CLI/include/CLI/: Application.h
CLI/src/: Application.cpp
GUI/: CMakeLists.txt  main.cpp
GUI/include/GUI/: Application.h
GUI/src/: Application.cpp  UI.cpp  main.cpp
OBJ-Loader/: OBJLoader.h
animCreator/: creator.py  main.py
app/: CMakeLists.txt
app/assets/: Credits.txt
app/assets/scenes/: Suzanne.gltf
app/libs/glfw/: README.md
app/src/: Application.cpp  Application.h  ApplicationUI.cpp  UI.cpp  UI.h  main.cpp
assets/scenes/: FlightHelmet.gltf  SciFiHelmet.gltf
cli/: CMakeLists.txt
cli/include/CLI/: Application.h
cli/src/: Application.cpp  main.cpp
core/: CMakeLists.txt
core/include/TracerX/: Animation.h  BVH.h  Buffer.h  Camera.h  Environment.h  FrameBuffer.h  GLTFLoader.h  Image.h  Material.h  Mesh.h  Quad.h  Renderer.h  SSBO.h  Scene.h  Shader.h  ShaderSrc.h  StorageBuffer.h  Texture.h  TextureArray.h  Triangle.h  UBO.h  UniformBuffer.h  Vertex.h  Vertex3.h
core/include/TracerX/Primitives/: Box.h  Mesh.h  Sphere.h
core/include/TracerX/core/: BvhNode.h  Triangle.h  Vertex.h
core/include/TracerX/core/GL/: Shader.h  StorageBuffer.h  Texture.h  TextureArray.h  UniformBuffer.h
core/libs/fastBVH/: CMakeLists.txt
core/libs/fastBVH/include/: FastBVH.h
core/libs/fastBVH/include/FastBVH/: BVH.h  Vector3.h
core/libs/glm/: CMakeLists.txt  readme.md
core/libs/oidn/: README.md
core/libs/tinydir/: README.md
core/shaders/fragment/: accumulator.glsl  albedo.glsl  normal.glsl  toneMapper.glsl
core/shaders/fragment/common/: random.glsl  transforms.glsl  uniforms.glsl
core/shaders/fragment/pathTracer/: intersection.glsl  main.glsl  random.glsl  structs.glsl  uniforms.glsl
core/shaders/fragment/toneMapper/: main.glsl
core/src/: Animation.cpp  Buffer.cpp  Camera.cpp  Environment.cpp  FrameBuffer.cpp  GLTFLoader.cpp  Image.cpp  Material.cpp  Quad.cpp  Renderer.cpp  RendererShaderBin.cpp  RendererShaderSrc.cpp  SSBO.cpp  Scene.cpp  Serialization.cpp  Shader.cpp  StorageBuffer.cpp  Texture.cpp  TextureArray.cpp  UBO.cpp  UniformBuffer.cpp  VectorMath.cpp
core/src/Primitives/: Box.cpp  Mesh.cpp  Sphere.cpp
docs/: Doxyfile
example/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt
gui/include/GUI/: Application.h  UI.h
gui/libs/ImGui/: imgui_UBO.cpp  imgui_UBO.h
gui/src/: Application.cpp  UI.cpp  main.cpp
include/TracerX/: Animation.h  Application.h  Buffer.h  Camera.h  Environment.h  FrameBuffer.h  Image.h  Material.h  Quad.h  Renderer.h  RendererUI.h  RendererVisual.h  Scene.h  Serialization.h  Shader.h  Texture.h  TextureArray.h  Triangle.h  UI.h  VectorMath.h
include/TracerX/Primitives/: AABB.h  Box.h  Mesh.h  Sphere.h
libs/ImGui/: imconfig.h  imgui-SFML.cpp  imgui_UBO.cpp  imgui_UBO.h
libs/fastBVH/include/FastBVH/: BBox.h
libs/glew/: README.md
libs/imguizmo/: README.md
libs/stb/: README.md
libs/tinygltf/: README.md
libs/tinyobjloader/: README.md  tiny_obj_loader.h
scripts/: build_shaders.py
shaders/: main.comp
shaders/common/: alphaBlend.comp  bsdf.comp  intersection.comp  random.comp  structs.comp  tonemap.comp  transforms.comp  uniforms.comp
shaders/fragment/pathTracer/: intersection.glsl  main.glsl  random.glsl  structs.glsl  uniforms.glsl
shaders/fragment/toneMapper/: main.glsl
shaders/fragment/viewer/: main.glsl
shaders/vertex/: main.glsl
src/: Animation.cpp  Application.cpp  Buffer.cpp  Camera.cpp  Environment.cpp  FrameBuffer.cpp  Image.cpp  Material.cpp  Quad.cpp  Renderer.cpp  RendererUI.cpp  RendererVisual.cpp  SSBO.cpp  Scene.cpp  Shader.cpp  Texture.cpp  TextureArray.cpp  UBO.cpp  UI.cpp  VectorMath.cpp  Vertex3.cpp  main.cpp
src/Primitives/: AABB.cpp  Box.cpp  Mesh.cpp
